1. Update REST interface to check sandhi 2. Update spell.html template TA message strings 3. Add unittests and reduce print().. in code

--- a/PythonPort/webspell/templates/spell.html
+++ b/PythonPort/webspell/templates/spell.html
@@ -13,7 +13,7 @@
 {% else %}
  <input name="word" value="தமில்"></input>
 {% endif %}
- <button type="submit">Check</button>
+ <button type="submit">சரிபார்</button>
 </form>
 
 <!----- Spell Checker Portion ------------>
@@ -27,7 +27,7 @@
 {% else %}
  <input name="text" value="தமில்"></input>
 {% endif %}
- <button type="submit">Check</button>
+ <button type="submit">சரிபார்க்க</button>
 </form>
 
 
